--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Kitware/paraview-docs#readme",
   "devDependencies": {},
   "dependencies": {
+    "expose-loader": "0.7.5",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
