--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/Kitware/paraview-docs#readme",
   "devDependencies": {},
   "dependencies": {
+    "css-loader": "1.0.0",
+    "file-loader": "2.0.0",
+    "style-loader": "0.23.0",
     "expose-loader": "0.7.5",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
